[package]
name = "nexus_unity_sdbp"
version = "0.9.1"
authors = ["Richard Schleich <rs@noreya.tech>", "Philipp Polzhofer <pp@noreya.tech>"]
edition = "2018"
license = "LGPL-3.0-only"

[dependencies]
log = "0.4.8"
crossbeam-channel = "0.4.2"
serde = { version = "~1.0.123", features = ["derive"] }
serde_json = "1.0.57"
regex = "1.3.9"
filetime = "0.2.10"
crc = "1.8.1"

[features]
io = []
bmc = []
power = []
power-mgmt= []