[package]
name = "noreya_sdbp"
version = "1.0.1"
authors = ["Richard Schleich <rs@noreya.tech>", "Philipp Polzhofer <pp@noreya.tech>"]
edition = "2021"
license = "LGPL-3.0-only"

[dependencies]
log = "0.4.17"
systemd-journal-logger = "1.0.0"
pretty_env_logger = "0.5.0"
crossbeam-channel = "0.5.6"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.57"
regex = "1.3.9"
filetime = "0.2.10"
crc = "3.0.1"
rand = "0.8.5"
nix = "0.26.2"
hex = "0.4.3"
udev = { version = "0.7.0", features = ["mio08"], optional = true }
rocket = { version = "0.5.0-rc.3", optional = true }
mio = "0.8.4"

[features]
service = ["dep:udev"]
io = []
bmc = ["dep:udev"]
power = []
power-mgmt= []
log = ["dep:rocket"]